Se aparta main.css para los estilos globales y se crea indexStyle.css para los estilos del home page(index)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500&family=Quicksand:wght@500&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="./css/main.css" type="text/css">
+        <link rel="stylesheet" href="./css/indexStyle.css" type="text/css">
         <link rel="stylesheet" href="./css/font/flaticon.css" type="text/css">
         <link rel="stylesheet" href="./css/tablets.css" media="(min-width: 600px)">
         <title>Blog</title>
