--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="./css/main.css" type="text/css">
         <link rel="stylesheet" href="./css/indexStyle.css" type="text/css">
         <link rel="stylesheet" href="./css/font/flaticon.css" type="text/css">
-        <link rel="stylesheet" href="./css/tablets.css" media="(min-width: 600px)">
-        <title>Blog</title>
+        <link rel="stylesheet" href="./css/headerTablets.css" media="(min-width: 600px)">
+        <title>Home</title>
     </head>
     <body>
         <header>
@@ -45,7 +45,7 @@
                     <p>Know the releases and news about the Tech world</p>
                 </div>
                 <div class="main-section__button-container">
-                    <a class="button-container--active" href="">Enter now!</a>
+                    <a class="button-container--active" href="./blogsPage.html">Enter now!</a>
                 </div>
             </section>
         </main>
