--- a/blogsPage.html
+++ b/blogsPage.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="./css/main.css" type="text/css">
+        <link rel="stylesheet" href="./css/footerStyles.css" type="text/css">
         <link rel="stylesheet" href="./css/blogsPageStyle.css" type="text/css">
         <link rel="stylesheet" href="./css/font/flaticon.css" type="text/css">
         <link rel="stylesheet" href="./css/headerTablets.css" media="(min-width: 600px)">
@@ -66,9 +67,9 @@
                     
                     <article class="item-article">
                         <div class="item-img item-img--post1"></div>
-                        <h2>Blogpost title</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur,dolorum eligendi repellat eaautem sint error repellat eaautem sint quo? Voluptas quamfugit optio dolores repellat eaautem sint beatae repellat eaautem sint, veniam obcaecati neque rationeipsam veritatis.</p>
-                        <a class="item-button item-button--active"href="">Read more</a>
+                        <h2>Momodora</h2>
+                        <p>Momodora: Reverie Under The Moonlight is the fourth installment in the beloved Momodora series of 2D platformers. If you want to know more about this game, i invite you to read this blog.</p>
+                        <a class="item-button item-button--active" target="_blank" href="./blogDetail.html">Read more</a>
                     </article>
                         
                     <article class="item-article">
@@ -86,7 +87,7 @@
                         <a class="item-button item-button--active"href="">Read more</a>
                     </article>
                     <article class="item-article">
-                        <div class="item-img item-img--post1"></div>
+                        <div class="item-img item-img--post5"></div>
                         <h2>Blogpost title</h2>
                         <p>Lorem ipsum dolor sit amet consectetur,dolorum eligendi error quo? Voluptas quamfugit optio dolores beatae repellat eaautem sint, veniam obcaecati neque rationeipsam veritatis.</p>
                         <a class="item-button item-button--active"href="">Read more</a>
