Se crea headerStyle.css ya que es header es igual para todas las páginas. Se eliminan las líneas de código repetidas.

--- a/blogsPage.html
+++ b/blogsPage.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="./css/main.css" type="text/css">
+        <link rel="stylesheet" href="./css/headerStyle.css" type="text/css">
         <link rel="stylesheet" href="./css/footerStyles.css" type="text/css">
         <link rel="stylesheet" href="./css/blogsPageStyle.css" type="text/css">
         <link rel="stylesheet" href="./css/font/flaticon.css" type="text/css">
