--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="./css/main.css" type="text/css">
+        <link rel="stylesheet" href="./css/headerStyle.css" type="text/css">
         <link rel="stylesheet" href="./css/indexStyle.css" type="text/css">
         <link rel="stylesheet" href="./css/font/flaticon.css" type="text/css">
         <link rel="stylesheet" href="./css/headerTablets.css" media="(min-width: 600px)">
