Algunos cambios a blogDetail.html, se cambia tipografía.

--- a/blogDetail.html
+++ b/blogDetail.html
@@ -54,7 +54,7 @@
                     </div>
                    
                     <article class="blog__article">
-                        <h2 class="blog__article-title">Momodora: Reverie Under The Moonlight</h2>
+                        <h1 class="blog__article-title">Momodora: Reverie Under The Moonlight</h1>
                         <p class="blog__article-text">Momodora takes place in the dying Kingdom of Karst, starring a priestess named Kaho. Kaho’s home has fallen under a curse that’s spreading across the land, and she finds that the curse can only be broken by beating the Queen, who has descended into madness. The retro style of this game is beautiful; colors make you feel that you are in a world where darkness and despair have fallen. Something that makes quite an impact are it's soundtracks; They are quite dark and I think they can instill fear and sadness in those who are less emotionally strong (be careful).</p>
                     </article>
                 </div>
@@ -67,9 +67,8 @@
                         <img class="contact-section__img" src="./assets/img/013-newsletter.png" alt="contact icon">
                     </figure>
                     <div class="contact-section__text">
-                        <h4>Contact</h4>
+                        <a href="#">Contact</a>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
-
                     </div>
                 </div>
                 <div class="contact-section__side-container">
@@ -77,16 +76,14 @@
                         <img class="contact-section__img" src="./assets/img/006-like.png" alt="email icon">
                     </figure>
                     <div class="contact-section__text">
-                        <h4>Write</h4>
+                        <a href="#">Write</a>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
-
                     </div>
                 </div>
             </section>
-       
         </main>
         <footer>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
         </footer>
     </body>
 </html>
