Se crea profile.html con estilos terminando la página. Se conrrigen tipografías, se ajusta responsive y se ajustan hiperlinks

--- a/blogsPage.html
+++ b/blogsPage.html
@@ -34,7 +34,7 @@
                     <a href="#"><img src="./assets/img/Logo-negro.png" alt="My blog"></a>
                 </div>
                 <div class="profile">
-                    <a href="./profile.html">About me</a>
+                    <a target="_blank" href="./profile.html">About me</a>
                 </div>
             </nav>
         </header>
@@ -110,7 +110,7 @@
        
         </main>
         <footer>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
         </footer>
     </body>
 </html>
