--- a/blogDetail.html
+++ b/blogDetail.html
@@ -36,7 +36,7 @@
                     <a href="#"><img src="./assets/img/Logo-negro.png" alt="My blog"></a>
                 </div>
                 <div class="profile">
-                    <a href="./profile.html">About me</a>
+                    <a target="_blank" href="./profile.html">About me</a>
                 </div>
             </nav>
         </header>
